scopes/compositions/compositions/ui/compositions-panel/compositions-panel.module.scss
.container {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.tab {
  > div:first-child {
    border: none;
    border-bottom: 1px solid var(--bit-border-color-lightest, #ededed);
  }
  > div:last-child {
    border-bottom: 1px solid var(--bit-border-color-lightest, #ededed);
  }
}

.linkWrapper {
  padding: 0 12px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 40px;
  font-size: var(--bit-p-xs);
  transition: all 300ms ease-in-out;
  color: var(--on-background-color);
  position: relative;

  &:hover {
    background-color: var(--border-medium-color, #ededed);
    // border-radius: 8px;
    transition: background-color 300ms ease-in-out;

    .panelLink {
      padding-right: 40px;
    }

    .right {
      visibility: visible;
      opacity: 1;
      color: var(--bit-text-color-light, #6c707c);
      transition: opacity 100ms ease-in-out;

      .icon {
        &:hover {
          color: var(--bit-text-color-heavy);
        }
      }
    }
  }

  &.active {
    display: flex;
    align-items: center;
    background-color: var(--bit-accent-color, #6c5ce7);
    color: var(--bit-bg-color, #ffffff);

    // overrides
    &:hover {
      background-color: #5d4aec;
    }

    .box {
      background-color: var(--bit-bg-color, #ffffff);
    }

    .right {
      // visibility: unset;
      opacity: 1;
      color: var(--bit-accent-bg, #eceaff);

      .icon {
        &:hover {
          color: var(--bit-bg-color, #ffffff);
        }
      }
    }
  }

  .right {
    position: absolute;
    right: 12px;
    top: 50%;
    transform: translateY(-50%);
    display: flex;
    gap: 12px;
    align-items: center;
    justify-content: center;
    opacity: 0;
    visibility: hidden;
    font-size: 13px;
    transition:
      opacity 100ms ease-in-out,
      visibility 0s linear 100ms;
  }

  .codeLink {
    cursor: pointer;
  }
}

.box {
  width: 10px;
  height: 10px;
  flex-shrink: 0;
  background-color: var(--bit-text-color-heavy);
  margin-right: 11px;
  border-radius: 1px;
}

.name {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-right: 8px;
}

.iconLink {
  display: flex;
  align-items: center;
  color: inherit;
  text-decoration: none;
}

.panelLink {
  display: flex;
  align-items: center;
  cursor: pointer;
  user-select: none;
  width: 100%;
  height: 100%;
  text-decoration: none;
  color: inherit;
  min-width: 0;
  transition: padding-right 200ms ease-in-out;

  &:active {
    color: inherit;
  }
}

.noLiveControls {
  padding: 12px;
}

.tabs {
  display: flex;
  align-items: center;
  margin-bottom: 17px;

  > div {
    position: relative;
    padding: 8px;
    text-transform: uppercase;
    font-size: 12px;
    font-weight: bold;

    &:not(:first-child) {
      color: #878c9a;
    }

    &:first-child {
      &:before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        background-color: var(--bit-accent-color, #6c5ce7);
        height: 3px;
        border-radius: 10px;
        transition:
          background-color 300ms,
          height 300ms;
      }
    }
  }
}

